<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>quant.tipl</groupId>
    <artifactId>quant-tipl</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>SIPL Parent</name>
    <url>http://www.4quant.com/</url>

    <scm>
        <connection>scm:git:git@bitbucket.org/skicavs/tipl.git</connection>
        <developerConnection>scm:git:https://skicavs@bitbucket.org/skicavs/tipl.git</developerConnection>
        <url>scm:git:skicavs@bitbucket.org/skicavs/tipl.git</url>
        <tag>maven</tag>
    </scm>
    <developers>
        <developer>
            <id>skicavs</id>
            <name>Kevin Mader</name>
            <email>kevinmader@gmail.com</email>
            <url>kmader.github.io</url>
            <organization>4Quant</organization>
            <organizationUrl>http://www.4quant.com</organizationUrl>
        </developer>
    </developers>
    <issueManagement>
        <system>Bitbucket</system>
        <url>https://bitbucket.org/skicavs/tipl/issues</url>
    </issueManagement>

    <prerequisites>
        <maven>3.0.4</maven>
    </prerequisites>

    <modules>
        <module>core</module>
        <module>ccgeom</module>
        <module>VIB-lib</module>
        <module>workflows</module>
        <module>spark</module>
        <module>volviewer</module>
        <module>integration</module>
        <module>jython</module>
        <module>examples</module>
    </modules>
    <properties>
        <scala.major>2.10</scala.major>
        <scala.version>2.10.4</scala.version>
        <java.version>1.6</java.version>

        <scala.binary.version>2.10</scala.binary.version>
        <scala.macros.version>2.0.1</scala.macros.version>
        <spark.version>1.1.0</spark.version>
        <javadoc.skip>false</javadoc.skip>
        <java.memory.min>-Xms1G</java.memory.min>
        <java.memory.max>-Xmx2G</java.memory.max>

        <PermGen>256m</PermGen>
        <MaxPermGen>1024m</MaxPermGen>
        <tipl.version>1.0-SNAPSHOT</tipl.version>
    </properties>
    <repositories>
        <!-- Force imagej repsository for imageio/jai -->
        <repository>
            <id>imagej.public</id>
            <url>http://maven.imagej.net/content/groups/public</url>
        </repository>
        <repository>
            <id>maven-repo</id>
            <!-- This should be at top, it makes maven try the central repo first and then others and hence faster dep resolution -->
            <name>Maven Repository</name>
            <!-- HTTPS is unavailable for Maven Central -->
            <url>http://repo.maven.apache.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>apache-repo</id>
            <name>Apache Repository</name>
            <url>https://repository.apache.org/content/repositories/releases</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>


        <repository>
            <id>cloudera-repo</id>
            <name>Cloudera Repository</name>
            <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>spring-releases</id>
            <name>Spring Release Repository</name>
            <url>http://repo.spring.io/libs-release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </repository>


    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://scala-tools.org/repo-releases</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>

     </dependencies> -->
    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.major}.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>

                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>

                </configuration>

            </plugin>

            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>

                <executions>
                    <execution>
                        <id>compile</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>

                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <phase>test-compile</phase>
                    </execution>

                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <args>
                        <arg>-unchecked</arg>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                        <arg>-language:postfixOps</arg>
                    </args>
                    <jvmArgs>
                        <jvmArg>${java.memory.min}</jvmArg>
                        <jvmArg>${java.memory.max}</jvmArg>
                        <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
                        <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>
            -->
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.1.6</version>
                <configuration>
                    <recompileMode>incremental</recompileMode>
                    <args>
                        <arg>-deprecation</arg>
                        <arg>-explaintypes</arg>
                        <arg>-target:jvm-1.6</arg>
                    </args>
                </configuration>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>



        </plugins>



    </build>
</project>
